--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "axios": "^1.8.4",
         "d3": "^7.9.0",
+        "install": "^0.13.0",
         "leaflet": "^1.9.4",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
