--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 spring.application.name=eleicoes
 
-spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.auto-index-creation=true
-spring.data.mongodb.host=${SPRING_DATA_MONGODB_HOST:localhost}
-spring.data.mongodb.port=${SPRING_DATA_MONGODB_PORT:27017}
-spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE:eleicoesdb}
-spring.data.mongodb.username=${SPRING_DATA_MONGODB_USERNAME:admin}
-spring.data.mongodb.password=${SPRING_DATA_MONGODB_PASSWORD:admin}
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
