--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -36,6 +36,11 @@
         	<version>3.4.4</version> 
     	</dependency>
 		<dependency>
+  			<groupId>org.springframework</groupId>
+  			<artifactId>spring-context-indexer</artifactId>
+  			<optional>true</optional>
+		</dependency>
+		<dependency>
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-test</artifactId>
         	<scope>test</scope>
@@ -86,6 +91,9 @@
 							<artifactId>lombok</artifactId>
 						</path>
 					</annotationProcessorPaths>
+					<compilerArgs>
+						<arg>-Aorg.springframework.context.index.processor.enabled=true</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
