--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=eleicoes
+spring.main.lazy-initialization=true
+
 
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.auto-index-creation=true
